--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "email-validator>=2.2.0",
     "eventlet>=0.39.1",
     "flask>=3.1.0",
     "flask-login>=0.6.3",
@@ -12,4 +13,5 @@ dependencies = [
     "flask-socketio>=5.5.1",
     "flask-sqlalchemy>=3.1.1",
     "flask-wtf>=1.2.2",
+    "qrcode[pil]>=8.0",
 ]
