--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "flask-socketio>=5.5.1",
     "flask-sqlalchemy>=3.1.1",
     "flask-wtf>=1.2.2",
+    "icecream>=2.1.4",
     "qrcode[pil]>=8.0",
 ]
