--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
+    "docker>=7.1.0",
     "email-validator>=2.2.0",
     "eventlet>=0.39.1",
     "flask>=3.1.0",
